--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ Byte-compiled / optimized
 *primavera
 
 # docs
-#docs/_build
-#docs/_static
-#docs/_templates
+docs/_build
+docs/_static
+docs/_templates
