Use setup.py as dependency path

--- a/.github/actions/install-python-and-package/action.yml
+++ b/.github/actions/install-python-and-package/action.yml
@@ -28,6 +28,7 @@ runs:
       with:
         python-version: ${{ inputs.python-version }}
         cache: 'pip'
+        cache-dependency-path: '**/setup.py'
 
     - name: Setup conda
       uses: s-weigand/setup-conda@v1
